package design.pattern.structural.flyweight.Sample;

import java.io.BufferedReader;
import java.io.FileReader;
import java.io.IOException;

/**
 * 大型字符类
 *
 * Flyweight 轻量级
 */
public class BigChar {
    // 字符名字
    private char charname;
    // 大型字符对应的字符串(由'#' '.' '\n'组成)
    private String fontdata;

    // 构造函数
    public BigChar(char charname) {
        this.charname = charname;
        try {
            // 读取磁盘文件
            BufferedReader reader = new BufferedReader(
                    new FileReader("big" + charname + ".txt")
            );
            String line;
            StringBuffer buf = new StringBuffer();
            while ((line = reader.readLine()) != null) {
                buf.append(line);
                buf.append("\n");
            }
            reader.close();
            this.fontdata = buf.toString();
        } catch (IOException e) {
            this.fontdata = charname + "?";
        }
    }

    // 显示大型字符
    public void print() {
        System.out.print(fontdata);
    }
}
